--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/logo-token-diaries.png"
+avatar: "/assets/img/logo.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -166,7 +166,6 @@ footer-hover-col: "#BFDBFE"
 #site-js:
 #  - "/assets/js/custom-script.js"
 
-# Dark Mode
 site-css:
   - "/assets/css/custom.css"
 
