--- a/_data/series.yml
+++ b/_data/series.yml
@@ -6,6 +6,6 @@ CA:
 
 R1M:
   label: Un risque, une mesure
-  description: Comprendre une attaque, puis une réponse concrète
+  description: Comprendre une attaque, puis apporter une réponse concrète
   url: /series/un-risque-une-mesure/
   featured: true
