--- a/_config.yml
+++ b/_config.yml
@@ -333,6 +333,6 @@ jekyll-minifier:
   simple_boolean_attributes: false  # Default: false
   compress_js_templates: false      # Default: false
   preserve_patterns:                # Default: (empty)
-  uglifier_args:                    # Default: (empty)
+  uglifier_args: {}                 # Default: (empty)
 
  
