--- a/.github/workflows/scheduled-pages.yml
+++ b/.github/workflows/scheduled-pages.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           source: ./
           destination: ./_site
-          future: true
+          future: false
 
       - uses: actions/upload-pages-artifact@v3
 
